--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHqsSI8GQSyhu7/IHg6Cg9",
+      "authorship_tag": "ABX9TyPP7WOjSo/5aua4zLEcQD3Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5219,7 +5219,7 @@
         "\n",
         "#Token and User Id hidden\n",
         "\n",
-        "!cp /content/.kaggle/kaggle.json ~/.kaggle/kaggle.json\n",
+        "!cp /content/kaggle.json ~/.kaggle/kaggle.json\n",
         "!kaggle config set -n path -v{/content}\n",
         "!chmod 600 /root/.kaggle/kaggle.json\n",
         "\n",
